feat: authenticate service accounts with client assertions
